# nasa-tech-explorer

./: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  mirror.yml  pages-deploy.yml  snapshot-nightly.yml
assets/: app.js
data/: facets.json  meta.json  patent.json  patent_issued.json  software.json
site/: index.html  robots.txt  sitemap.xml  status.json
site/assets/: style.css
site/patent/: DRC-TOPS-0.html  DRC-TOPS-1.html  DRC-TOPS-16.html  DRC-TOPS-17.html  DRC-TOPS-19.html  DRC-TOPS-24.html  DRC-TOPS-25.html  DRC-TOPS-26.html  DRC-TOPS-36.html  DRC-TOPS-37.html  DRC-TOPS-39.html  DRC-TOPS-41.html  DRC-TOPS-42.html  DRC-TOPS-8.html  DRC-TOPS-9.html  GSC-TOPS-10.html  (+609 more)
site/patent-issued/: DRC-TOPS-0.html  DRC-TOPS-16.html  DRC-TOPS-17.html  DRC-TOPS-19.html  DRC-TOPS-24.html  DRC-TOPS-25.html  DRC-TOPS-26.html  DRC-TOPS-36.html  DRC-TOPS-37.html  DRC-TOPS-39.html  DRC-TOPS-41.html  DRC-TOPS-42.html  DRC-TOPS-8.html  DRC-TOPS-9.html  GSC-TOPS-10.html  GSC-TOPS-102.html  GSC-TOPS-12.html  GSC-TOPS-138.html  GSC-TOPS-139.html  GSC-TOPS-14.html  GSC-TOPS-16.html  GSC-TOPS-170.html  GSC-TOPS-179.html  GSC-TOPS-190.html  GSC-TOPS-196.html  GSC-TOPS-199.html  GSC-TOPS-200.html  GSC-TOPS-208.html  GSC-TOPS-212.html  GSC-TOPS-214.html  GSC-TOPS-216.html  GSC-TOPS-22.html  GSC-TOPS-223.html  GSC-TOPS-225.html  GSC-TOPS-230.html  GSC-TOPS-234.html  GSC-TOPS-241.html  GSC-TOPS-243.html  GSC-TOPS-244.html  GSC-TOPS-247.html  (+464 more)
templates/: detail.html.j2  index.html.j2  sitemap.xml.j2
tests/: test_status.py
(+3780 files in other folders)
