[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "t2-explorer"
version = "0.1.0"
description = "Mirror + static explorer for NASA's Technology Transfer catalog."
requires-python = ">=3.12"
dependencies = ["httpx>=0.27", "jinja2>=3.1"]

[project.optional-dependencies]
dev = ["pyright", "pylint", "ruff", "pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pylint.main]
py-version = "3.12"
source-roots = ["src"]

[tool.pylint.format]
max-line-length = 100
